k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: examen
spec:
  type: NodePort
  ports:
  - name: service-http
    port: 80
    targetPort: 5002
  selector:
    app: prueba-k8s
